--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-7.95MB/s(Youtube:不良林), server: mixv4-27.194610.xyz, port: 443, type: vmess, uuid: e9bb0c5c-01c7-7907-c454-3b8b6d472b19, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a185d5dc-c726-466c-98f2-ba494e63695f, ws-headers: {Host: mixv4-27.194610.xyz}}
-  - {name: 🇺🇸 美国-4.52MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.68MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-337.8KB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.59MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.13MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-4.91MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.27MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 台湾-1.43MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.06MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-342.0KB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-4.91MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.43MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-526.0KB/s(Youtube:不良林), server: 43.154.235.119, port: 10064, type: vmess, uuid: 8b115f89-27cc-4ea9-85af-dda2de597928, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.27MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇺🇸 美国-3.81MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-7.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-7.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-7.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.43MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-7.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-7.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-7.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-7.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-337.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.0KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.91MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.81MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
