--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-6.55MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-4.20MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.84MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
-  - {name: 🇰🇷 韩国-4.27MB/s(Youtube:不良林), server: ocikr.n.optage.moe, port: 44600, type: trojan, password: 7e1c3fe1-720d-43e3-86c6-bdbdbfcf0401, sni: ocikr.n.optage.moe, skip-cert-verify: true}
   - {name: 🇨🇳 中国-9.06MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.16MB/s(Youtube:不良林), server: 104.243.30.252, port: 246, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-1.25MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-19.07MB/s(Youtube:不良林), server: 120.233.186.204, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-7.24MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.75MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.54MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.59MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.13MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇸🇬 新加坡-868.2KB/s(Youtube:不良林), server: 67tw01.fans8.xyz, port: 443, type: trojan, password: 0e90d359-1733-4994-a195-4df768a18e99, sni: 67tw01.fans8.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-6.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-868.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-6.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-868.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-6.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-868.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-6.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-868.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-6.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-868.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-6.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-868.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-6.55MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-868.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
