--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.06MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.25MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-19.07MB/s(Youtube:不良林), server: 120.233.186.204, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.24MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: c8bae3de-16ed-4247-8a99-f38ef79a4b51, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.59MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.13MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇸🇬 新加坡-868.2KB/s(Youtube:不良林), server: 67tw01.fans8.xyz, port: 443, type: trojan, password: 0e90d359-1733-4994-a195-4df768a18e99, sni: 67tw01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-18.91MB/s(Youtube:不良林), server: 120.233.186.59, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-18.38MB/s(Youtube:不良林), server: 120.233.186.204, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.45MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-15.24MB/s(Youtube:不良林), server: 120.233.186.59, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.99MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-4.23MB/s(Youtube:不良林), server: 120.233.186.59, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.80MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 台湾-2.36MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-868.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-868.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-868.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-868.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-868.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-868.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-928.9KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-745.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-868.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
