--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-18.91MB/s(Youtube:不良林), server: 120.233.186.59, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-18.38MB/s(Youtube:不良林), server: 120.233.186.204, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.45MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-15.24MB/s(Youtube:不良林), server: 120.233.186.59, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.99MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-4.23MB/s(Youtube:不良林), server: 120.233.186.59, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.06MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.56MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-206.3KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.23MB/s(Youtube:不良林), server: 120.233.186.59, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-1.80MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
   - {name: 🇨🇳 台湾-2.36MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
   - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: s162.s2022.xyz, port: 23802, type: trojan, password: d724e4d0-841b-3b92-ac0d-70fcbbb7e934, sni: s162.s2022.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.36MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇩🇪 德国-371.0KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-18.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-206.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.80MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-371.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-18.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-206.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.80MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-371.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-18.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-206.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.80MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-371.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -74,47 +74,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-18.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-206.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.80MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-371.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-18.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-206.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.80MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-371.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-18.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-206.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.80MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-371.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-18.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-15.24MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.99MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.56MB/s(Youtube:不良林)
+      - 🇩🇪 德国-206.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.23MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.80MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
+      - 🇩🇪 德国-371.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
